--- a/src/Makefile
+++ b/src/Makefile
@@ -22,7 +22,7 @@
 ########################################
 
 TARGET = sq1
-OBJECTS = main.o Player.o Bullet.o DrawingHelpers.o
+OBJECTS = main.o Player.o Bullet.o DrawingHelpers.o Enemy.o SquareEnemy.o
 
 LOCAL_INC_PATH = /Users/jpaone/Desktop/include
 LOCAL_LIB_PATH = /Users/jpaone/Desktop/lib
@@ -120,4 +120,4 @@ $(TARGET): $(OBJECTS)
 	$(CXX) $(CFLAGS) -o $@ $^ $(LIBPATH) $(LIBS)
 
 # DEPENDENCIES
-main.o: main.cpp Player.cpp Bullet.cpp DrawingHelpers.cpp
+main.o: main.cpp Player.cpp Bullet.cpp DrawingHelpers.cpp Enemy.cpp SquareEnemy.cpp
